Sunday, November 15, 2009
	Matt Zweig:
		* Added single-window close.
		* Fixed Lua pauseMessage() function.
		* Added function to fetch model names from Lua.
		* Added Lua Bridge for Planets.
		* Added function to fetch ship and planet lists from Lua.

	Maoserr:
		* Fixing cross-platform compilation warnings.
		* Fixed Logging on Windows.

Saturday, November 14, 2009
	Matt Zweig:
		* Added Lua functions to set ui_picture images based off of Ship
		models
		* Added Lua functions to change radar color.

Friday, November 13, 2009
	Shawn Reynolds:
		* Added screen shaking.

Tuesday, November 10, 2009
	Matt Zweig:
		* Added 17 old Epiar ship images and models.

Saturday, November 7, 2009
	Chris Thielen:
		* UI logic about mouse focus is much better
		* Buttons now visibly click
		* Began work on fixing window border transparency (mostly Photoshop work)

Wednesday, November 4, 2009
	Chris Thielen:
		* Plugged some memory leaks that moses7 mentioned in #epiar
		  and redesigned Image::ConvertToTexture() a bit to avoid them
		* Added a check to detect if we need GL_RGBA or GL_BGRA in Image::ConvertToTexture

Tuesday, November 3, 2009
	Chris Thielen:
		* Fixed 'brown planet' bug
		* Fixed animation loading bug

	Matt Zweig:
		* Cleaned up the TAG game so that it is more understandable.
		* The AI Plan model used here could be adapted for more complex scenes.

Monday, October 19, 2009
	Chris Thielen:
		* Updated OS X SDL files to v1.2.14 for OS X 10.6 support

Thursday, August 27, 2009
	Chris Thielen:
		* Added a BUILDING file to describe the build process on various architectures

Thursday, July 23, 2009
	Chris Thielen:
		* Began adding a framerate counter
		* Fixed bug with quadrant.cpp missing
		* Do we need a resource manager to pass around simulation,
		hud, etc. or is there another way to do this?

Tuesday, June 23, 2009
	Chris Thielen:
		* Obey options.xml for starfield density

Monday, February 23, 2009
	Chris Thielen:
		* Implemented 'echo' function for Lua console