@@ -2,7 +2,7 @@
  * Filename      : ai_lua.h
  * Author(s)     : Matt Zweig (thezweig@gmail.com)
  * Date Created  : Thursday, October 29, 2009
- * Last Modified : Friday, November 14, 2009
+ * Last Modified : Monday, November 16 2009
  * Purpose       : Lua Bridge for AI objects
  * Notes         :
  */
@@ -11,11 +11,17 @@
 #ifndef __H_AI_LUA_
 #define __H_AI_LUA_
 
+#include "AI/ai.h"
+#include "Utilities/lua.h"
+
+#define EPIAR_SHIP "EpiarLua.Ship"
 
 class AI_Lua{
 	public:
 		// Functions to communicate with Lua
 		static void RegisterAI(lua_State *luaVM);
+        static AI **pushShip(lua_State *luaVM);
+        static AI **checkShip(lua_State *luaVM, int index);
 		static int newShip(lua_State *luaVM);
 
 		// Actions
