@@ -56,14 +56,31 @@ void Planets_Lua::RegisterPlanets(lua_State *L){
 		{"Landable", &Planets_Lua::GetLandable},
 		{NULL, NULL}
 	};
-	luaL_register(L,"Epiar.Planet",PlanetFunctions);
+	luaL_newmetatable(L, EPIAR_PLANET);
+	luaL_openlib(L, EPIAR_PLANET, PlanetFunctions,0);  
 }
 
+
+cPlanet **Planets_Lua::pushPlanet(lua_State *luaVM){
+	cPlanet **s = (cPlanet **)lua_newuserdata(luaVM, sizeof(cPlanet*));
+    *s = new cPlanet();
+    luaL_getmetatable(luaVM, EPIAR_PLANET);
+    lua_setmetatable(luaVM, -2);
+    return s;
+}
+
+cPlanet **Planets_Lua::checkPlanet(lua_State *luaVM, int index){
+  cPlanet **p;
+  luaL_checktype(luaVM, index, LUA_TUSERDATA);
+  p = (cPlanet**)luaL_checkudata(luaVM, index, EPIAR_PLANET);
+  if (p == NULL) luaL_typerror(luaVM, index, EPIAR_PLANET);
+  return p;
+}
 
 int Planets_Lua::GetName(lua_State* L){
 	int n = lua_gettop(L);  // Number of arguments
 	if (n == 1) {
-		cPlanet** planet= (cPlanet**)lua_touserdata(L,1);
+		cPlanet** planet= checkPlanet(L,1);
 		lua_pushstring(L, (*planet)->GetName().c_str());
 	} else {
 		luaL_error(L, "Got %d arguments expected 1 (self)", n); 
@@ -74,7 +91,7 @@ int Planets_Lua::GetName(lua_State* L){
 int Planets_Lua::GetPosition(lua_State* L){
 	int n = lua_gettop(L);  // Number of arguments
 	if (n == 1) {
-		cPlanet** planet= (cPlanet**)lua_touserdata(L,1);
+		cPlanet** planet= checkPlanet(L,1);
 		lua_pushnumber(L, (*planet)->GetWorldPosition().GetX() );
 		lua_pushnumber(L, (*planet)->GetWorldPosition().GetY() );
 	} else {
@@ -86,7 +103,7 @@ int Planets_Lua::GetPosition(lua_State* L){
 int Planets_Lua::GetAlliance(lua_State* L){
 	int n = lua_gettop(L);  // Number of arguments
 	if (n == 1) {
-		cPlanet** planet= (cPlanet**)lua_touserdata(L,1);
+		cPlanet** planet= checkPlanet(L,1);
 		lua_pushstring(L, (*planet)->GetAlliance().c_str());
 	} else {
 		luaL_error(L, "Got %d arguments expected 1 (self)", n); 
@@ -97,7 +114,7 @@ int Planets_Lua::GetAlliance(lua_State* L){
 int Planets_Lua::GetTraffic(lua_State* L){
 	int n = lua_gettop(L);  // Number of arguments
 	if (n == 1) {
-		cPlanet** planet= (cPlanet**)lua_touserdata(L,1);
+		cPlanet** planet= checkPlanet(L,1);
 		lua_pushnumber(L, (*planet)->GetTraffic() );
 	} else {
 		luaL_error(L, "Got %d arguments expected 1 (self)", n); 
@@ -108,7 +125,7 @@ int Planets_Lua::GetTraffic(lua_State* L){
 int Planets_Lua::GetMilitiaSize(lua_State* L){
 	int n = lua_gettop(L);  // Number of arguments
 	if (n == 1) {
-		cPlanet** planet= (cPlanet**)lua_touserdata(L,1);
+		cPlanet** planet= checkPlanet(L,1);
 		lua_pushnumber(L, (*planet)->GetMilitiaSize() );
 	} else {
 		luaL_error(L, "Got %d arguments expected 1 (self)", n); 
@@ -119,7 +136,7 @@ int Planets_Lua::GetMilitiaSize(lua_State* L){
 int Planets_Lua::GetLandable(lua_State* L){
 	int n = lua_gettop(L);  // Number of arguments
 	if (n == 1) {
-		cPlanet** planet= (cPlanet**)lua_touserdata(L,1);
+		cPlanet** planet= checkPlanet(L,1);
 		lua_pushboolean(L, (*planet)->GetLandable() );
 	} else {
 		luaL_error(L, "Got %d arguments expected 1 (self)", n); 
