@@ -5,6 +5,7 @@ Sunday, November 15, 2009
 		* Added function to fetch model names from Lua.
 		* Added Lua Bridge for Planets.
 		* Added function to fetch ship and planet lists from Lua.
+		* Made Lua Planets and Ships Type-Safe.
 
 	Maoserr:
 		* Fixing cross-platform compilation warnings.
